openshift/kustomize/api/validator/base/deploy.yaml
---
# How the app will be deployed to the pod.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-validator
  namespace: default
  annotations:
    image.openshift.io/triggers: '[{"from": {"kind": "ImageStreamTag", "name": "api:latest", "namespace": "9b301c-tools"}, "fieldPath": "spec.template.spec.containers[?(@.name==\"api\")].image"}]'
    description: Defines how to deploy api
  labels:
    name: api-validator
    part-of: tno
    version: 1.0.0
    component: api-validator
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    matchLabels:
      part-of: tno
      component: api-validator
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: api-validator
      labels:
        part-of: tno
        component: api-validator
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: api-storage
          persistentVolumeClaim:
            claimName: api-storage
        - name: ingest-storage
          persistentVolumeClaim:
            claimName: ingest-storage
      containers:
        - name: api-validator
          image: image-registry.apps.silver.devops.gov.bc.ca/9b301c-tools/api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: api-storage
              mountPath: /mnt/data
            - name: ingest-storage
              mountPath: /mnt/ingest
          resources:
            requests:
              cpu: 100m
              memory: 350Mi
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
