openshift/kustomize/api/validator/base/route-editor.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api-editor-validator
  namespace: default
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/cookie_name: mmi
    haproxy.router.openshift.io/timeout: 2m
  labels:
    name: api-editor-validator
    part-of: tno
    version: 1.0.0
    component: api
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  host: mmi-editor-validator.apps.silver.devops.gov.bc.ca
  path: /api
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: api-validator
    weight: 100
